[package]
name = "pong_game_tcp_socket"
version = "0.1.0"
edition = "2021"
authors = ["Rik de Goede <rik.dgd@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.21.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
